docs/apim/4.2/SUMMARY.md
# Table of contents

## Overview

* [Introduction to Gravitee API Management (APIM)](README.md)
* [APIM Architecture](overview/apim-architecture/README.md)
  * [Production Deployments and Capacity Planning](overview/apim-architecture/production-deployments-and-capacity-planning.md)
* [Plugins](overview/plugins.md)
* [Integrations](overview/integrations.md)
* [Gravitee APIM Enterprise Edition](overview/gravitee-apim-enterprise-edition/README.md)
  * [Enterprise Edition Licensing](https://documentation.gravitee.io/apim/readme/enterprise-edition-licensing)
* [Gravitee API Definitions and Execution Engines](overview/gravitee-api-definitions-and-execution-engines/README.md)
  * [Reactive execution engine](overview/gravitee-api-definitions-and-execution-engines/reactive-execution-engine.md)
  * [Message Flow Control](overview/gravitee-api-definitions-and-execution-engines/message-flow-control.md)

## Getting Started

* [Install & Upgrade Guides](getting-started/install-and-upgrade-guides/README.md)
  * [Enterprise Trial](getting-started/install-and-upgrade-guides/free-trial.md)
  * [Install on Docker](getting-started/install-and-upgrade-guides/install-on-docker/README.md)
    * [Quick Install with Docker Compose](getting-started/install-and-upgrade-guides/install-on-docker/quick-install-with-docker-compose.md)
    * [Custom Install with Docker Compose](getting-started/install-and-upgrade-guides/install-on-docker/custom-install-with-docker-compose.md)
    * [Docker Images Install](getting-started/install-and-upgrade-guides/install-on-docker/docker-images-install.md)
    * [Further Customization](getting-started/install-and-upgrade-guides/install-on-docker/further-customization.md)
  * [Install on Kubernetes](getting-started/install-and-upgrade-guides/install-on-kubernetes/README.md)
    * [APIM Helm Install and Configuration](getting-started/install-and-upgrade-guides/install-on-kubernetes/apim-helm-install-and-configuration.md)
    * [Architecture Overview](getting-started/install-and-upgrade-guides/install-on-kubernetes/architecture-overview.md)
  * [Install on Amazon](getting-started/install-and-upgrade-guides/install-on-amazon/README.md)
    * [Quick install](getting-started/install-and-upgrade-guides/install-on-amazon/quick-install.md)
    * [Manual install](getting-started/install-and-upgrade-guides/install-on-amazon/manual-install/README.md)
      * [Prerequisites](getting-started/install-and-upgrade-guides/install-on-amazon/manual-install/prerequisites.md)
      * [APIM Components Installation](getting-started/install-and-upgrade-guides/install-on-amazon/manual-install/apim-components-installation.md)
      * [APIM Full Stack Installation](getting-started/install-and-upgrade-guides/install-on-amazon/manual-install/apim-full-stack-installation.md)
  * [Install on Red Hat and CentOS](getting-started/install-and-upgrade-guides/install-on-red-hat-and-centos/README.md)
    * [APIM Full Stack Installation](getting-started/install-and-upgrade-guides/install-on-red-hat-and-centos/apim-full-stack-installation.md)
    * [APIM Components Installation](getting-started/install-and-upgrade-guides/install-on-red-hat-and-centos/apim-components-installation.md)
  * [Install With .ZIP](getting-started/install-and-upgrade-guides/install-with-.zip.md)
  * [4.2 Upgrade Guide](getting-started/install-and-upgrade-guides/4.2-upgrade-guide.md)
  * [Breaking changes and deprecated functionality for API Management](getting-started/install-and-upgrade-guides/breaking-changes-and-deprecated-functionality-for-api-management.md)
  * [Multi-tenancy](getting-started/install-and-upgrade-guides/multi-tenancy.md)
* [Quickstart Guide](getting-started/quickstart-guide/README.md)
  * [Gateway APIs 101 - Traditional & Message Proxies](getting-started/quickstart-guide/gateway-apis-101-traditional-and-message-proxies/README.md)
    * [Traditional Proxy](getting-started/quickstart-guide/gateway-apis-101-traditional-and-message-proxies/traditional-proxy.md)
    * [Message Proxy](getting-started/quickstart-guide/gateway-apis-101-traditional-and-message-proxies/message-proxy.md)
  * [Plans and Policies 101](getting-started/quickstart-guide/plans-and-policies-101.md)
  * [Developer Portal 101](getting-started/quickstart-guide/developer-portal-101.md)
  * [What's Next](getting-started/quickstart-guide/whats-next.md)
* [Configuration](getting-started/configuration/README.md)
  * [APIM Gateway](getting-started/configuration/the-gravitee-api-gateway/README.md)
    * [General Configuration](getting-started/configuration/the-gravitee-api-gateway/general-configuration.md)
    * [Internal API](getting-started/configuration/the-gravitee-api-gateway/gateway-internal-api.md)
    * [OpenTracing](getting-started/configuration/the-gravitee-api-gateway/opentracing.md)
    * [Logging](getting-started/configuration/the-gravitee-api-gateway/logging.md)
    * [Sharding tags](getting-started/configuration/the-gravitee-api-gateway/sharding-tags.md)
    * [Tenants](getting-started/configuration/the-gravitee-api-gateway/tenants.md)
    * [Dictionaries](getting-started/configuration/the-gravitee-api-gateway/dictionaries.md)
  * [APIM Management API](getting-started/configuration/apim-management-api/README.md)
    * [General Configuration](getting-started/configuration/apim-management-api/general-configuration.md)
    * [User and Management Configuration](getting-started/configuration/apim-management-api/user-and-management-configuration.md)
    * [Internal API](getting-started/configuration/apim-management-api/internal-api-1.md)
    * [Security](getting-started/configuration/apim-management-api/security.md)
  * [APIM Console](getting-started/configuration/apim-console.md)
  * [APIM Developer Portal](getting-started/configuration/apim-developer-portal.md)
  * [Repositories](getting-started/configuration/repositories/README.md)
    * [Elasticsearch](getting-started/configuration/repositories/elasticsearch.md)
    * [MongoDB](getting-started/configuration/repositories/mongodb.md)
    * [JDBC](getting-started/configuration/repositories/jdbc.md)
    * [Redis](getting-started/configuration/repositories/redis.md)
  * [Reporters](getting-started/configuration/reporters/README.md)
    * [Formats](getting-started/configuration/reporters/formats.md)
  * [Cache](getting-started/configuration/cache.md)
  * [HTTP Reverse Proxy](getting-started/configuration/http-reverse-proxy.md)
  * [Authentication](getting-started/configuration/authentication.md)
  * [Notifications](getting-started/configuration/notifications.md)
  * [Production-ready APIM Environment](getting-started/configuration/production-ready-apim-environment.md)
  * [Secret Providers](getting-started/configuration/secret-providers.md)
* [Hybrid Deployment](getting-started/hybrid-deployment/README.md)
  * [Hybrid Deployment on Kubernetes](getting-started/hybrid-deployment/hybrid-deployment-on-kubernetes.md)
  * [Advanced Hybrid Deployment](getting-started/hybrid-deployment/advanced-hybrid-deployment.md)

## Guides

* [Prologue](guides/prologue.md)
* [Create APIs](guides/create-apis/README.md)
  * [Import APIs](guides/create-apis/import-apis/README.md)
    * [OpenAPI Spec Import](guides/create-apis/import-apis/openapi-spec-import.md)
  * [The API Creation Wizard](guides/create-apis/the-api-creation-wizard/README.md)
    * [v4 API creation wizard](guides/create-apis/the-api-creation-wizard/v4-api-creation-wizard.md)
    * [v2 API creation wizard](guides/create-apis/the-api-creation-wizard/v2-api-creation-wizard.md)
  * [TCP Proxy APIs](guides/create-apis/tcp-proxy-apis.md)
* [API Configuration](guides/api-configuration/README.md)
  * [v4 API Configuration](guides/api-configuration/v4-api-configuration/README.md)
    * [Entrypoints](guides/api-configuration/v4-api-configuration/entrypoints/README.md)
      * [v4 Proxy API Entrypoints](guides/api-configuration/v4-api-configuration/entrypoints/v4-proxy-api-entrypoints.md)
      * [v4 Message API Entrypoints](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/README.md)
        * [HTTP GET](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/http-get.md)
        * [HTTP POST](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/http-post.md)
        * [WebSocket](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/websocket.md)
        * [Webhook](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/webhook.md)
        * [Server-sent Events](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/server-sent-events.md)
    * [Endpoints](guides/api-configuration/v4-api-configuration/endpoints/README.md)
      * [v4 Proxy API Endpoints](guides/api-configuration/v4-api-configuration/endpoints/v4-proxy-api-endpoints.md)
      * [v4 Message API Endpoints](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/README.md)
        * [Kafka](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/kafka.md)
        * [MQTT5](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/mqtt5.md)
        * [Solace](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/solace.md)
        * [RabbitMQ](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/rabbitmq.md)
        * [Mock](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/mock.md)
    * [Quality of Service](guides/api-configuration/v4-api-configuration/quality-of-service.md)
    * [General Info Settings](guides/api-configuration/v4-api-configuration/general-info-settings.md)
    * [User and Group Access](guides/api-configuration/v4-api-configuration/user-and-group-access.md)
    * [Documentation](guides/api-configuration/v4-api-configuration/documentation.md)
  * [v2 API Configuration](guides/api-configuration/v2-api-configuration/README.md)
    * [Documentation](guides/api-configuration/v2-api-configuration/documentation.md)
    * [Load-Balancing, Failover, and Health Checks](guides/api-configuration/v2-api-configuration/load-balancing-failover-and-health-checks.md)
    * [Service Discovery](guides/api-configuration/v2-api-configuration/service-discovery.md)
    * [General Proxy Settings](guides/api-configuration/v2-api-configuration/general-proxy-settings.md)
    * [User and Group Access](guides/api-configuration/v2-api-configuration/configure-user-and-group-access.md)
    * [General Info Settings](guides/api-configuration/v2-api-configuration/general-info-settings.md)
  * [Resources](guides/api-configuration/resources.md)
* [Policy Studio](guides/policy-studio/README.md)
  * [v2 API Policy Studio](guides/policy-studio/v2-api-policy-studio.md)
  * [v4 API Policy Studio](guides/policy-studio/v4-api-policy-studio.md)
* [API Exposure: Plans, Applications, & Subscriptions](guides/api-exposure-plans-applications-and-subscriptions/README.md)
  * [Plans](guides/api-exposure-plans-applications-and-subscriptions/plans.md)
  * [Applications](guides/api-exposure-plans-applications-and-subscriptions/applications.md)
  * [Subscriptions](guides/api-exposure-plans-applications-and-subscriptions/subscriptions.md)
* [Developer Portal](guides/developer-portal/README.md)
  * [Configuration](guides/developer-portal/configuration/README.md)
    * [General Settings](guides/developer-portal/configuration/general-settings.md)
    * [User Management](guides/developer-portal/configuration/user-management.md)
    * [Layout and Theme Customization](guides/developer-portal/configuration/layout-and-theme-customization.md)
    * [Documentation](guides/developer-portal/configuration/documentation.md)
  * [Tools and Features](guides/developer-portal/tools-and-features/README.md)
    * [Webhook Subscription Management](guides/developer-portal/tools-and-features/webhook-subscription-management.md)
    * [Applications](guides/developer-portal/tools-and-features/applications.md)
    * [Documentation](guides/developer-portal/tools-and-features/documentation.md)
* [API Measurement, Tracking, and Analytics](guides/api-measurement-tracking-and-analytics/README.md)
  * [Configure the Dashboard with Custom API Analytics](guides/api-measurement-tracking-and-analytics/configure-the-dashboard-with-custom-api-analytics.md)
  * [Using the API Quality feature](guides/api-measurement-tracking-and-analytics/using-the-api-quality-feature.md)
  * [Configure and Use API Logging](guides/api-measurement-tracking-and-analytics/configure-and-use-api-logging.md)
* [Gravitee Expression Language](guides/gravitee-expression-language.md)
* [Gravitee Kubernetes Operator](guides/gravitee-kubernetes-operator/README.md)
  * [Quick Start](guides/gravitee-kubernetes-operator/quick-start.md)
  * [Architecture Overview](getting-started/install-and-upgrade-guides/install-on-kubernetes/architecture-overview.md)
  * [Installation](guides/gravitee-kubernetes-operator/installation/README.md)
    * [Helm](guides/gravitee-kubernetes-operator/installation/helm.md)
  * [Test GKO After Deployment](guides/gravitee-kubernetes-operator/test-gko-after-deployment.md)
  * [Gravitee as an Ingress Controller](guides/gravitee-kubernetes-operator/gravitee-as-an-ingress-controller.md)
  * [Custom Resource Definitions](guides/gravitee-kubernetes-operator/custom-resource-definitions/README.md)
    * [ManagementContext](guides/gravitee-kubernetes-operator/custom-resource-definitions/managementcontext.md)
    * [ApiDefinition](guides/gravitee-kubernetes-operator/custom-resource-definitions/apidefinition.md)
    * [ApiResource](guides/gravitee-kubernetes-operator/custom-resource-definitions/apiresource.md)
    * [Application](guides/gravitee-kubernetes-operator/custom-resource-definitions/application.md)
    * [Sync CRDs with API Management API](guides/gravitee-kubernetes-operator/custom-resource-definitions/sync-crds-with-api-management-api.md)
    * [Deploy Operator Resources with Helm](guides/gravitee-kubernetes-operator/custom-resource-definitions/deploy-operator-resources-with-helm.md)
* [Administration](guides/administration/README.md)
  * [Administering organizations and environments](guides/administration/administering-organizations-and-environments.md)
  * [User Management and Permissions](guides/administration/user-management-and-permissions.md)
  * [Support](guides/administration/support.md)
* [Developer Contributions](guides/developer-contributions/README.md)
  * [Custom Plugins](guides/developer-contributions/custom-plugins.md)
  * [Custom Policies](guides/developer-contributions/custom-policies.md)

## Reference

* [Management API Reference](reference/management-api-reference.md)
* [Gravitee Kubernetes Operator API Reference](reference/gravitee-kubernetes-operator-api-reference.md)
* [Policy Reference](reference/policy-reference/README.md)
  * [API Key](reference/policy-reference/api-key.md)
  * [Assign Attributes](reference/policy-reference/assign-attributes.md)
  * [Assign Content](reference/policy-reference/assign-content.md)
  * [Assign Metrics](reference/policy-reference/assign-metrics.md)
  * [AVRO to JSON](reference/policy-reference/avro-to-json.md)
  * [AVRO to Protobuf](reference/policy-reference/avro-to-protobuf.md)
  * [AWS Lambda](reference/policy-reference/aws-lambda.md)
  * [Basic Authentication](reference/policy-reference/basic-authentication.md)
  * [Cache](reference/policy-reference/cache.md)
  * [Circuit Breaker](reference/policy-reference/circuit-breaker.md)
  * [Cloud Events](reference/policy-reference/cloud-events.md)
  * [Data Logging Masking](reference/policy-reference/data-logging-masking.md)
  * [Dynamic Routing](reference/policy-reference/dynamic-routing.md)
  * [Generate HTTP Signature](reference/policy-reference/generate-http-signature.md)
  * [Generate JWT](reference/policy-reference/generate-jwt.md)
  * [GeoIP Filtering](reference/policy-reference/geoip-filtering.md)
  * [Groovy](reference/policy-reference/groovy.md)
  * [HTTP Callout](reference/policy-reference/http-callout.md)
  * [HTTP Signature](reference/policy-reference/http-signature.md)
  * [Interrupt](reference/policy-reference/interrupt.md)
  * [IP filtering](reference/policy-reference/ip-filtering.md)
  * [Javascript](reference/policy-reference/javascript.md)
  * [JSON to JSON](reference/policy-reference/json-to-json.md)
  * [JSON to XML](reference/policy-reference/json-to-xml.md)
  * [JSON Threat Protection](reference/policy-reference/json-threat-protection.md)
  * [JSON Validation](reference/policy-reference/json-validation.md)
  * [JSON Web Signature (JWS)](reference/policy-reference/json-web-signature-jws.md)
  * [JSON Web Token (JWT)](reference/policy-reference/json-web-token-jwt.md)
  * [Keyless](reference/policy-reference/keyless.md)
  * [Latency](reference/policy-reference/latency.md)
  * [Message Filtering](reference/policy-reference/message-filtering.md)
  * [Mock](reference/policy-reference/mock.md)
  * [OAuth2](reference/policy-reference/oauth2/README.md)
    * [Generic OAuth2 Authorization Server](reference/policy-reference/oauth2/generic-oauth2-authorization-server.md)
    * [Gravitee.io AM Authorization Server](reference/policy-reference/oauth2/gravitee.io-am-authorization-server.md)
  * [OpenID Connect UserInfo](reference/policy-reference/openid-connect-userinfo.md)
  * [Override HTTP Method](reference/policy-reference/override-http-method.md)
  * [Protobuf to JSON](reference/policy-reference/protobuf-to-json.md)
  * [Rate Limit](reference/policy-reference/rate-limit.md)
  * [Regex Threat Protection](reference/policy-reference/regex-threat-protection.md)
  * [Request Content Limit](reference/policy-reference/request-content-limit.md)
  * [Request Validation](reference/policy-reference/request-validation.md)
  * [Resource Filtering](reference/policy-reference/resource-filtering.md)
  * [REST to SOAP](reference/policy-reference/rest-to-soap.md)
  * [Retry](reference/policy-reference/retry.md)
  * [Role-based Access Control (RBAC)](reference/policy-reference/role-based-access-control-rbac.md)
  * [SSL Enforcement](reference/policy-reference/ssl-enforcement.md)
  * [Traffic Shadowing](reference/policy-reference/traffic-shadowing.md)
  * [Transform Headers](reference/policy-reference/transform-headers.md)
  * [Transform Query Parameters](reference/policy-reference/transform-query-parameters.md)
  * [WS Security Authentication](reference/policy-reference/ws-security-authentication.md)
  * [XML to JSON](reference/policy-reference/xml-to-json.md)
  * [XML Threat Protection](reference/policy-reference/xml-threat-protection.md)
  * [XML Validation](reference/policy-reference/xml-validation.md)
  * [XSLT](reference/policy-reference/xslt.md)
* [Endpoint Reference](reference/endpoint-reference/README.md)
  * [Kafka](reference/endpoint-reference/kafka.md)
  * [MQTT5](reference/endpoint-reference/mqtt5.md)
  * [Solace](reference/endpoint-reference/solace.md)
  * [RabbitMQ](reference/endpoint-reference/rabbitmq.md)
* [Entrypoint Reference](reference/entrypoint-reference/README.md)
  * [Server-sent Events](reference/entrypoint-reference/server-sent-events.md)
  * [Webhook](reference/entrypoint-reference/webhook.md)

## Releases & Changelog

* [Release Notes](releases-and-changelog/release-notes/README.md)
  * [APIM 4.2](releases-and-changelog/release-notes/apim-4.2.md)
  * [APIM 4.1](https://documentation.gravitee.io/apim/4.1/releases-and-changelog/release-notes/apim-4.1)
  * [APIM 4.0](https://documentation.gravitee.io/apim/4.0/releases-and-changelog/release-notes/apim-4.0)
* [Changelog](releases-and-changelog/changelog/README.md)
  * [APIM 4.2.x](releases-and-changelog/changelog/apim-4.2.x.md)
  * [APIM 4.1.x](https://documentation.gravitee.io/apim/4.1/releases-and-changelog/changelogs/apim-4.1.x-changelog)
  * [APIM 4.0.x](https://documentation.gravitee.io/apim/4.0/releases-and-changelog/changelog/apim-4.0.x)

## Community & Support

* [Enterprise Support](community-and-support/enterprise-support.md)
* [Community](community-and-support/community/README.md)
  * [Support](https://community.gravitee.io/c/support/11)
  * [Announcements & Events](https://community.gravitee.io/c/announcements/5)
