docs/apim/4.3/SUMMARY.md
# Table of contents

## Overview

* [Introduction to Gravitee API Management (APIM)](README.md)
* [APIM Architecture](overview/apim-architecture/README.md)
  * [Production Deployments and Capacity Planning](overview/apim-architecture/production-deployments-and-capacity-planning.md)
* [Plugins](overview/plugins.md)
* [Integrations](overview/integrations.md)
* [Gravitee APIM Enterprise Edition](overview/gravitee-apim-enterprise-edition/README.md)
  * [Enterprise Edition Licensing](https://documentation.gravitee.io/apim/readme/enterprise-edition-licensing)
* [Gravitee API Definitions and Execution Engines](overview/gravitee-api-definitions-and-execution-engines/README.md)
  * [Reactive Execution Engine](overview/gravitee-api-definitions-and-execution-engines/reactive-execution-engine.md)
  * [Engine Comparisons](overview/gravitee-api-definitions-and-execution-engines/engine-comparisons.md)

## Getting Started

* [Installing Gravitee API Management](getting-started/install-and-upgrade-guides/README.md)
  * [Installing a self-hosted Gravitee API Management platform](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/README.md)
    * [Installing Gravitee API Management with Docker](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-docker/README.md)
      * [Quick Install Gravitee API Management with Docker Compose](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-docker/quick-install-with-docker-compose.md)
      * [Custom Install Gravitee API Management with Docker Compose](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-docker/custom-install-with-docker-compose.md)
      * [Installing Gravitee API Management with Docker Images Install](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-docker/docker-images-install.md)
      * [Customizing your Gravitee API Management installation on Docker](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-docker/further-customization.md)
    * [Installing Gravitee API Management on Kubernetes](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-kubernetes/README.md)
      * [APIM Helm Install and Configuration](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-kubernetes/apim-helm-install-and-configuration.md)
      * [Architecture Overview](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-kubernetes/architecture-overview.md)
    * [Installing Gravitee API Management on an Amazon instance](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-amazon/README.md)
      * [Installing Gravitee API Management on an Amazon instance with Quick install](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-amazon/quick-install.md)
      * [Installing Gravitee APIM on an Amazon instance with Manual Install](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-amazon/manual-install.md)
    * [Installing Gravitee API Management using RPM Packages](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-red-hat-and-centos.md)
    * [Installing Gravitee API Management with .ZIP](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-with-.zip.md)
  * [Installing a Gravitee Gateway with a Hybrid Deployment](getting-started/install-and-upgrade-guides/hybrid-deployment/README.md)
    * [Installing a Gravitee Gateway with a Hybrid Deployment on Kubernetes](getting-started/install-and-upgrade-guides/hybrid-deployment/hybrid-deployment-on-kubernetes.md)
    * [Advanced Hybrid Deployment](getting-started/install-and-upgrade-guides/hybrid-deployment/advanced-hybrid-deployment.md)
  * [Multi-tenancy](getting-started/install-and-upgrade-guides/multi-tenancy.md)
* [Upgrading Gravitee API Management](getting-started/upgrading-gravitee-api-management/README.md)
  * [4.3 Upgrade Guide](getting-started/upgrading-gravitee-api-management/4.2-upgrade-guide.md)
  * [Breaking changes and deprecated functionality for API Management](getting-started/upgrading-gravitee-api-management/breaking-changes-and-deprecated-functionality-for-api-management.md)
* [Quickstart Guide](getting-started/quickstart-guide/README.md)
  * [Gateway APIs 101 - Traditional & Message Proxies](getting-started/quickstart-guide/gateway-apis-101-traditional-and-message-proxies/README.md)
    * [Traditional Proxy](getting-started/quickstart-guide/gateway-apis-101-traditional-and-message-proxies/traditional-proxy.md)
    * [Message Proxy](getting-started/quickstart-guide/gateway-apis-101-traditional-and-message-proxies/message-proxy.md)
  * [Plans and Policies 101](getting-started/quickstart-guide/plans-and-policies-101.md)
  * [Developer Portal 101](getting-started/quickstart-guide/developer-portal-101.md)
  * [What's Next](getting-started/quickstart-guide/whats-next.md)
* [Configuration](getting-started/configuration/README.md)
  * [APIM Gateway](getting-started/configuration/apim-gateway/README.md)
    * [General Configuration](getting-started/configuration/apim-gateway/general-configuration.md)
    * [Internal API](getting-started/configuration/apim-gateway/internal-api.md)
    * [OpenTracing](getting-started/configuration/apim-gateway/opentracing.md)
    * [Logging](getting-started/configuration/apim-gateway/logging.md)
    * [Sharding tags](getting-started/configuration/apim-gateway/sharding-tags.md)
    * [Tenants](getting-started/configuration/apim-gateway/tenants.md)
    * [Dictionaries](getting-started/configuration/apim-gateway/dictionaries.md)
  * [APIM Management API](getting-started/configuration/apim-management-api/README.md)
    * [General Configuration](getting-started/configuration/apim-management-api/general-configuration.md)
    * [User and Management Configuration](getting-started/configuration/apim-management-api/user-and-management-configuration.md)
    * [Internal API](getting-started/configuration/apim-management-api/internal-api.md)
    * [Security](getting-started/configuration/apim-management-api/security.md)
  * [APIM Console](getting-started/configuration/apim-console.md)
  * [APIM Developer Portal](getting-started/configuration/apim-developer-portal.md)
  * [Repositories](getting-started/configuration/repositories/README.md)
    * [Elasticsearch](getting-started/configuration/repositories/elasticsearch.md)
    * [MongoDB](getting-started/configuration/repositories/mongodb.md)
    * [JDBC](getting-started/configuration/repositories/jdbc.md)
    * [Redis](getting-started/configuration/repositories/redis.md)
  * [Reporters](getting-started/configuration/reporters/README.md)
    * [Formats](getting-started/configuration/reporters/formats.md)
  * [Cache](getting-started/configuration/cache.md)
  * [HTTP Reverse Proxy](getting-started/configuration/http-reverse-proxy.md)
  * [Authentication](getting-started/configuration/authentication/README.md)
    * [Authentication Providers](getting-started/configuration/authentication/authentication-providers.md)
    * [Gravitee AM Authentication](getting-started/configuration/authentication/gravitee-am-authentication.md)
    * [Social Providers](getting-started/configuration/authentication/social-providers.md)
    * [Custom OAuth2/OpenID Authorization Server](getting-started/configuration/authentication/custom-oauth2-openid-authorization-server.md)
    * [Azure AD / Entra ID](getting-started/configuration/authentication/azure-ad-entra-id.md)
  * [Notifications](getting-started/configuration/notifications.md)
  * [Production-ready APIM Environment](getting-started/configuration/production-ready-apim-environment/README.md)
    * [Internal APIs](getting-started/configuration/production-ready-apim-environment/internal-apis.md)
    * [Deployment](getting-started/configuration/production-ready-apim-environment/deployment.md)
    * [Authentication](getting-started/configuration/production-ready-apim-environment/authentication.md)
    * [Brute-force an Browser Protection](getting-started/configuration/production-ready-apim-environment/brute-force-an-browser-protection.md)
    * [Configuration Settings](getting-started/configuration/production-ready-apim-environment/configuration-settings.md)
    * [APIM Safe Practices](getting-started/configuration/production-ready-apim-environment/apim-safe-practices.md)
  * [Secret Providers](getting-started/configuration/secret-providers.md)

## Most Common Use Cases

* [Rate Limiting REST API Use Cases](most-common-use-cases/rate-limiting-rest-api-use-cases.md)
* [Configure JWT Security with APIM](most-common-use-cases/configure-jwt-security-with-apim.md)
* [Adding Role-based Access Control to your JWT Plan](most-common-use-cases/adding-role-based-access-control-to-your-jwt-plan.md)
* [Configure Dynamic Client Registration with APIM](most-common-use-cases/configure-dynamic-client-registration-with-apim.md)
* [Secure and Expose gRPC Services with Gravitee](most-common-use-cases/secure-and-expose-grpc-services-with-gravitee.md)

## Guides

* [Create APIs](guides/create-apis/README.md)
  * [Import APIs](guides/create-apis/import-apis/README.md)
    * [OpenAPI Spec](guides/create-apis/import-apis/openapi-spec.md)
    * [JSON Definition](guides/create-apis/import-apis/json-definition.md)
  * [The API Creation Wizard](guides/create-apis/the-api-creation-wizard/README.md)
    * [v4 API creation wizard](guides/create-apis/the-api-creation-wizard/v4-api-creation-wizard.md)
    * [v2 API creation wizard](guides/create-apis/the-api-creation-wizard/v2-api-creation-wizard.md)
* [API Configuration](guides/api-configuration/README.md)
  * [v4 API Configuration](guides/api-configuration/v4-api-configuration/README.md)
    * [Entrypoints](guides/api-configuration/v4-api-configuration/entrypoints/README.md)
      * [v4 Proxy API Entrypoints](guides/api-configuration/v4-api-configuration/entrypoints/v4-proxy-api-entrypoints.md)
      * [v4 Message API Entrypoints](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/README.md)
        * [HTTP GET](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/http-get.md)
        * [HTTP POST](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/http-post.md)
        * [WebSocket](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/websocket.md)
        * [Webhook](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/webhook.md)
        * [Server-sent Events](guides/api-configuration/v4-api-configuration/entrypoints/v4-message-api-entrypoints/server-sent-events.md)
      * [Response Templates](guides/api-configuration/v4-api-configuration/entrypoints/response-templates.md)
      * [CORS](guides/api-configuration/v4-api-configuration/entrypoints/cors.md)
    * [Endpoints](guides/api-configuration/v4-api-configuration/endpoints/README.md)
      * [v4 Proxy API Endpoints](guides/api-configuration/v4-api-configuration/endpoints/v4-proxy-api-endpoints.md)
      * [v4 Message API Endpoints](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/README.md)
        * [Kafka](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/kafka.md)
        * [MQTT5](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/mqtt5.md)
        * [Solace](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/solace.md)
        * [RabbitMQ](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/rabbitmq.md)
        * [Mock](guides/api-configuration/v4-api-configuration/endpoints/v4-message-api-endpoints/mock.md)
      * [Health-check](guides/api-configuration/v4-api-configuration/endpoints/health-check.md)
    * [Quality of Service](guides/api-configuration/v4-api-configuration/quality-of-service.md)
    * [General Info Settings](guides/api-configuration/v4-api-configuration/general-info-settings.md)
    * [User Permissions](guides/api-configuration/v4-api-configuration/user-permissions.md)
    * [Audit Logs](guides/api-configuration/v4-api-configuration/audit-logs.md)
    * [Version History](guides/api-configuration/v4-api-configuration/version-history.md)
    * [Documentation](guides/api-configuration/v4-api-configuration/documentation.md)
  * [v2 API Configuration](guides/api-configuration/v2-api-configuration/README.md)
    * [General Info Settings](guides/api-configuration/v2-api-configuration/general-info-settings.md)
    * [Proxy Settings](guides/api-configuration/v2-api-configuration/general-proxy-settings.md)
    * [Documentation](guides/api-configuration/v2-api-configuration/documentation.md)
    * [Load-balancing, Failover, and Health-checks](guides/api-configuration/v2-api-configuration/load-balancing-failover-and-health-checks.md)
    * [Service Discovery](guides/api-configuration/v2-api-configuration/service-discovery.md)
    * [User and Group Access](guides/api-configuration/v2-api-configuration/configure-user-and-group-access.md)
  * [Resources](guides/api-configuration/resources.md)
* [Policy Studio](guides/policy-studio/README.md)
  * [v2 API Policy Studio](guides/policy-studio/v2-api-policy-studio.md)
  * [v4 API Policy Studio](guides/policy-studio/v4-api-policy-studio.md)
* [API Exposure: Plans, Applications, & Subscriptions](guides/api-exposure-plans-applications-and-subscriptions/README.md)
  * [Plans](guides/api-exposure-plans-applications-and-subscriptions/plans/README.md)
    * [Keyless](guides/api-exposure-plans-applications-and-subscriptions/plans/keyless.md)
    * [API Key](guides/api-exposure-plans-applications-and-subscriptions/plans/api-key.md)
    * [JWT](guides/api-exposure-plans-applications-and-subscriptions/plans/jwt.md)
    * [OAuth2](guides/api-exposure-plans-applications-and-subscriptions/plans/oauth2.md)
    * [Push](guides/api-exposure-plans-applications-and-subscriptions/plans/push.md)
  * [Applications](guides/api-exposure-plans-applications-and-subscriptions/applications.md)
  * [Subscriptions](guides/api-exposure-plans-applications-and-subscriptions/subscriptions.md)
* [Developer Portal](guides/developer-portal/README.md)
  * [Configuration](guides/developer-portal/configuration/README.md)
    * [General Settings](guides/developer-portal/configuration/general-settings.md)
    * [User Management](guides/developer-portal/configuration/user-management.md)
    * [Layout and Theme Customization](guides/developer-portal/configuration/layout-and-theme-customization.md)
    * [Documentation](guides/developer-portal/configuration/documentation.md)
  * [Tools and Features](guides/developer-portal/tools-and-features/README.md)
    * [Webhook Subscription Management](guides/developer-portal/tools-and-features/webhook-subscription-management.md)
    * [Applications](guides/developer-portal/tools-and-features/applications.md)
    * [Documentation](guides/developer-portal/tools-and-features/documentation.md)
* [API Measurement, Tracking, and Analytics](guides/api-measurement-tracking-and-analytics/README.md)
  * [Dashboards](guides/api-measurement-tracking-and-analytics/create-a-dashboard.md)
  * [API Quality](guides/api-measurement-tracking-and-analytics/using-the-api-quality-feature.md)
  * [Audit Trail](guides/api-measurement-tracking-and-analytics/audit-trail.md)
* [Gravitee Expression Language](guides/gravitee-expression-language.md)
* [Gravitee Kubernetes Operator](guides/gravitee-kubernetes-operator/README.md)
  * [Quickstart Guide](guides/gravitee-kubernetes-operator/quick-start.md)
  * [Architecture Overview](getting-started/install-and-upgrade-guides/installing-a-self-hosted-gravitee-api-management-platform/install-on-kubernetes/architecture-overview.md)
  * [Helm Installation](guides/gravitee-kubernetes-operator/installation.md)
  * [Test GKO After Deployment](guides/gravitee-kubernetes-operator/test-gko-after-deployment.md)
  * [Gravitee as an Ingress Controller](guides/gravitee-kubernetes-operator/gravitee-as-an-ingress-controller.md)
  * [Custom Resource Definitions](guides/gravitee-kubernetes-operator/custom-resource-definitions/README.md)
    * [ManagementContext](guides/gravitee-kubernetes-operator/custom-resource-definitions/managementcontext.md)
    * [ApiDefinition](guides/gravitee-kubernetes-operator/custom-resource-definitions/apidefinition.md)
    * [ApiResource](guides/gravitee-kubernetes-operator/custom-resource-definitions/apiresource.md)
    * [Application](guides/gravitee-kubernetes-operator/custom-resource-definitions/application.md)
    * [Sync CRDs with API Management API](guides/gravitee-kubernetes-operator/custom-resource-definitions/sync-crds-with-api-management-api.md)
    * [Deploy Operator Resources with Helm](guides/gravitee-kubernetes-operator/custom-resource-definitions/deploy-operator-resources-with-helm.md)
* [Administration](guides/administration/README.md)
  * [Administering organizations and environments](guides/administration/administering-organizations-and-environments.md)
  * [User Management and Permissions](guides/administration/user-management-and-permissions.md)
  * [Support](guides/administration/support.md)
* [Developer Contributions](guides/developer-contributions/README.md)
  * [Custom Plugins](guides/developer-contributions/custom-plugins.md)
  * [Custom Policies](guides/developer-contributions/custom-policies.md)

## Reference

* [Management API Reference](reference/management-api-reference.md)
* [Gravitee Kubernetes Operator API Reference](reference/gravitee-kubernetes-operator-api-reference.md)
* [Policy Reference](reference/policy-reference/README.md)
  * [API Key](reference/policy-reference/api-key.md)
  * [Assign Attributes](reference/policy-reference/assign-attributes.md)
  * [Assign Content](reference/policy-reference/assign-content.md)
  * [Assign Metrics](reference/policy-reference/assign-metrics.md)
  * [AVRO to JSON](reference/policy-reference/avro-to-json.md)
  * [AVRO to Protobuf](reference/policy-reference/avro-to-protobuf.md)
  * [AWS Lambda](reference/policy-reference/aws-lambda.md)
  * [Basic Authentication](reference/policy-reference/basic-authentication.md)
  * [Cache](reference/policy-reference/cache.md)
  * [Circuit Breaker](reference/policy-reference/circuit-breaker.md)
  * [Cloud Events](reference/policy-reference/cloud-events.md)
  * [Custom Query Parameters Parser](reference/policy-reference/custom-query-parameters-parser.md)
  * [Data Logging Masking](reference/policy-reference/data-logging-masking.md)
  * [Dynamic Routing](reference/policy-reference/dynamic-routing.md)
  * [Generate HTTP Signature](reference/policy-reference/generate-http-signature.md)
  * [Generate JWT](reference/policy-reference/generate-jwt.md)
  * [GeoIP Filtering](reference/policy-reference/geoip-filtering.md)
  * [GraphQL Rate Limit](reference/policy-reference/graphql-rate-limit.md)
  * [Groovy](reference/policy-reference/groovy.md)
  * [HTML to JSON](reference/policy-reference/html-to-json.md)
  * [HTTP Callout](reference/policy-reference/http-callout.md)
  * [HTTP Signature](reference/policy-reference/http-signature.md)
  * [Interrupt](reference/policy-reference/interrupt.md)
  * [IP Filtering](reference/policy-reference/ip-filtering.md)
  * [Javascript](reference/policy-reference/javascript.md)
  * [JSON to JSON](reference/policy-reference/json-to-json.md)
  * [JSON to XML](reference/policy-reference/json-to-xml.md)
  * [JSON Threat Protection](reference/policy-reference/json-threat-protection.md)
  * [JSON Validation](reference/policy-reference/json-validation.md)
  * [JSON Web Signature (JWS)](reference/policy-reference/json-web-signature-jws.md)
  * [JSON Web Token (JWT)](reference/policy-reference/json-web-token-jwt.md)
  * [Keyless](reference/policy-reference/keyless.md)
  * [Latency](reference/policy-reference/latency.md)
  * [Message Filtering](reference/policy-reference/message-filtering.md)
  * [Metrics Reporter](reference/policy-reference/metrics-reporter.md)
  * [Mock](reference/policy-reference/mock.md)
  * [OAuth2](reference/policy-reference/oauth2/README.md)
    * [Generic OAuth2 Authorization Server](reference/policy-reference/oauth2/generic-oauth2-authorization-server.md)
    * [Gravitee.io AM Authorization Server](reference/policy-reference/oauth2/gravitee.io-am-authorization-server.md)
  * [OpenID Connect UserInfo](reference/policy-reference/openid-connect-userinfo.md)
  * [Override HTTP Method](reference/policy-reference/override-http-method.md)
  * [Protobuf to JSON](reference/policy-reference/protobuf-to-json.md)
  * [Rate Limit](reference/policy-reference/rate-limit.md)
  * [Regex Threat Protection](reference/policy-reference/regex-threat-protection.md)
  * [Request Content Limit](reference/policy-reference/request-content-limit.md)
  * [Request Validation](reference/policy-reference/request-validation.md)
  * [Resource Filtering](reference/policy-reference/resource-filtering.md)
  * [REST to SOAP](reference/policy-reference/rest-to-soap.md)
  * [Retry](reference/policy-reference/retry.md)
  * [Role-based Access Control (RBAC)](reference/policy-reference/role-based-access-control-rbac.md)
  * [SSL Enforcement](reference/policy-reference/ssl-enforcement.md)
  * [Traffic Shadowing](reference/policy-reference/traffic-shadowing.md)
  * [Transform Headers](reference/policy-reference/transform-headers.md)
  * [Transform Query Parameters](reference/policy-reference/transform-query-parameters.md)
  * [URL Rewriting](reference/policy-reference/url-rewriting.md)
  * [WS Security Authentication](reference/policy-reference/ws-security-authentication.md)
  * [XML to JSON](reference/policy-reference/xml-to-json.md)
  * [XML Threat Protection](reference/policy-reference/xml-threat-protection.md)
  * [XML Validation](reference/policy-reference/xml-validation.md)
  * [XSLT](reference/policy-reference/xslt.md)
* [Endpoint Reference](reference/endpoint-reference/README.md)
  * [Kafka](reference/endpoint-reference/kafka.md)
  * [MQTT5](reference/endpoint-reference/mqtt5.md)
  * [Solace](reference/endpoint-reference/solace.md)
  * [RabbitMQ](reference/endpoint-reference/rabbitmq.md)
* [Entrypoint Reference](reference/entrypoint-reference/README.md)
  * [Server-sent Events](reference/entrypoint-reference/server-sent-events.md)
  * [Webhook](reference/entrypoint-reference/webhook.md)

## Releases & Changelog

* [Release Notes](releases-and-changelog/release-notes/README.md)
  * [APIM 4.3](releases-and-changelog/release-notes/apim-4.3.md)
  * [APIM 4.2](https://documentation.gravitee.io/apim/4.2/overview/release-notes/apim-4.2)
  * [APIM 4.1](https://documentation.gravitee.io/apim/4.1/releases-and-changelog/release-notes/apim-4.1)
  * [APIM 4.0](https://documentation.gravitee.io/apim/4.0/releases-and-changelog/release-notes/apim-4.0)
* [Changelog](releases-and-changelog/changelog/README.md)
  * [APIM 4.3.x](releases-and-changelog/changelog/apim-4.3.x.md)
  * [APIM 4.2.x](https://documentation.gravitee.io/apim/4.2/overview/changelog/apim-4.2)
  * [APIM 4.1.x](https://documentation.gravitee.io/apim/4.1/releases-and-changelog/changelogs/apim-4.1.x-changelog)
  * [APIM 4.0.x](https://documentation.gravitee.io/apim/4.0/releases-and-changelog/changelog/apim-4.0.x)

## Community & Support

* [Enterprise Support](community-and-support/enterprise-support.md)
* [Community](community-and-support/community/README.md)
  * [Support](https://community.gravitee.io/c/support/11)
  * [Announcements & Events](https://community.gravitee.io/c/announcements/5)
